--- a/src/main/webapp/pages/createFormation.xhtml
+++ b/src/main/webapp/pages/createFormation.xhtml
@@ -4,7 +4,7 @@
                 template="/template/template.xhtml">
 
     <ui:define name="content">
-        Page pour créer une formation
+        Page to create course
     </ui:define>
 
 </ui:composition>
