--- a/src/main/webapp/pages/accueil.xhtml
+++ b/src/main/webapp/pages/accueil.xhtml
@@ -4,7 +4,7 @@
                 template="/template/template.xhtml">
 
     <ui:define name="content">
-        Accueil
+        Home
     </ui:define>
 
 </ui:composition>
