--- a/src/main/webapp/pages/searchFormations.xhtml
+++ b/src/main/webapp/pages/searchFormations.xhtml
@@ -13,7 +13,7 @@
 
         <h:form id="form" prependId="false">
             <p:accordionPanel id="accordion" prependId="false">
-                <p:tab title="Search Courses" rendered="true">
+                <p:tab title="Search courses" rendered="true">
                     <p:dataTable id="formationDT" var="listFormations" value="#{searchFormationsModel.listFormations}" sortBy="#{listFormations.courseCode}" expandableRowGroups="true" widgetVar="formationTable"
                                  emptyMessage="No matching result" filteredValue="#{searchFormationsModel.filteredFormations}" selectionMode="single" selection="#{searchFormationsModel.selectedFormation}"
                                  rowKey="#{listFormations.courseSessionId}">
@@ -25,6 +25,8 @@
                             </p:outputPanel>
                         </f:facet>
 
+                        <p:ajax event="rowSelect" update="clientsDetails" oncomplete="PF('clientDialog').show()" />
+
                         <p:headerRow>
                             <p:column colspan="4">
                                 <h:outputText value="#{listFormations.courseCode} : #{listFormations.title} " />
@@ -34,11 +36,27 @@
                         <p:column filterBy="#{listFormations.title}" rendered="false"/>
                         <p:column filterBy="#{listFormations.courseCode}" rendered="false"/>
 
-                        <p:column filterBy="#{listFormations.startDate}" headerText="Start date">
-                            <h:outputText value="#{listFormations.startDate}" />
+                        <p:column filterBy="#{listFormations.startDate}" headerText="Start date" filterFunction="#{searchFormationsView.filterByDate}">
+                            <f:facet name="filter">
+                                <p:calendar  pattern="yyyy-MM-dd">
+                                    <p:ajax event="dateSelect"  oncomplete="PF('formationTable').filter()" update="formationDT"/>
+                                    <p:ajax event="change" oncomplete="PF('formationTable').filter()" update="formationDT"/>
+                                </p:calendar>
+                            </f:facet>
+                            <h:outputText value="#{listFormations.startDate}">
+                                <f:convertDateTime pattern="yyyy-MM-dd" />
+                            </h:outputText>
                         </p:column>
-                        <p:column filterBy="#{listFormations.endDate}" headerText="End date">
-                            <h:outputText value="#{listFormations.endDate}" />
+                        <p:column filterBy="#{listFormations.endDate}" headerText="End date" filterFunction="#{searchFormationsView.filterByDate}">
+                            <f:facet name="filter">
+                                <p:calendar  pattern="yyyy-MM-dd">
+                                    <p:ajax event="dateSelect"  oncomplete="PF('formationTable').filter()" update="formationDT"/>
+                                    <p:ajax event="change" oncomplete="PF('formationTable').filter()" update="formationDT"/>
+                                </p:calendar>
+                            </f:facet>
+                            <h:outputText value="#{listFormations.endDate}">
+                                <f:convertDateTime pattern="yyyy-MM-dd" />
+                            </h:outputText>
                         </p:column>
                         <p:column filterBy="#{listFormations.city}" headerText="City" filterMatchMode="exact">
                             <f:facet name="filter">
@@ -47,19 +65,16 @@
                                     <f:selectItems value="#{searchFormationsModel.cities}" />
                                 </p:selectOneMenu>
                             </f:facet>
-                            <h:outputText value="#{listFormations.city}" />
+                            <h:outputText value="#{listFormations.city}"/>
                         </p:column>
-                        <p:column filterBy="#{listFormations.maxClients}" headerText="Max clients">
-                            <h:outputText value="#{listFormations.maxClients}" />
+                        <p:column filterBy="#{searchFormationsView.getFillingPercentage(listFormations.listClients.size(), listFormations.maxClients)}" headerText="Filling percentage">
+                            <p:progressBar value="#{searchFormationsView.getFillingPercentage(listFormations.listClients.size(), listFormations.maxClients)}" labelTemplate="{value}%" displayOnly="true"/>
                         </p:column>
-                        <f:facet name="footer">
-                            <p:commandButton process="formationDT" update="clientsDetails" icon="ui-icon-search" value="View" oncomplete="PF('clientDialog').show()"/>
-                        </f:facet>
                     </p:dataTable>
                 </p:tab>
             </p:accordionPanel>
 
-            <p:dialog header="Course clients" widgetVar="clientDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false" appendTo="@(body)" styleClass="dialog" >
+            <p:dialog header="Course clients" widgetVar="clientDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false" appendTo="@(body)" styleClass="dialog">
                 <p:outputPanel id="clientsDetails" style="text-align:left;">
                     <p:dataTable id="clientsDT" widgetVar="clientsDT" editable="true" var="clients" value="#{searchFormationsModel.selectedFormation.listClients}">
                         <p:column headerText="First name">
